# cognee-rs

./: .env.example  CHANGELOG.md  Cargo.toml  release-plz.toml
.github/workflows/: ci.yml
capi/: Cargo.toml
crates/bindings-common/: Cargo.toml
crates/chunking/: Cargo.toml
crates/cli/: Cargo.toml
crates/cognify/: Cargo.toml
crates/components/src/: registry.rs
crates/core/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/tests/: migration_compat.rs  pipeline_run_attribution.rs  relational_ops_span_instrumentation.rs
crates/delete/: Cargo.toml
crates/embedding/: Cargo.toml
crates/graph/: Cargo.toml
crates/http-server/: Cargo.toml
crates/http-server/src/: config.rs  router_builder.rs  wiring.rs
crates/http-server/tests/: test_openapi.rs
crates/ingestion/: Cargo.toml
crates/lib/: Cargo.toml
crates/lib/src/: component_manager.rs  config.rs
crates/llm/: Cargo.toml
crates/llm/src/: factory.rs
crates/logging/: Cargo.toml
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/observability/: Cargo.toml
crates/ontology/: Cargo.toml
crates/search/: Cargo.toml
crates/session/: Cargo.toml
crates/storage/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/utils/: Cargo.toml
crates/vector/: Cargo.toml
crates/visualization/: Cargo.toml
docs/: RELEASE.md  configuration.md
docs/http-server/: README.md  architecture.md  auth.md  tenants.md
docs/http-server/routers/: api-keys.md  auth-register.md  auth.md  (+8 more)
docs/tools/: cli.md
python/: Cargo.toml
(+11 files in other folders)
